<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/Hoteles"
        android:title="@string/hoteles"
        android:orderInCategory="100"/>

    <item android:id="@+id/Bares"
        android:title="@string/bares"
        android:orderInCategory="100"/>

    <item android:id="@+id/Turismo"
        android:title="@string/turismo"
        android:orderInCategory="100"/>

    <item android:id="@+id/Demografia"
        android:title="@string/title_activity_demografia"
        android:orderInCategory="100"/>

    <item android:id="@+id/Acerca"
        android:title="@string/acerca"
        android:orderInCategory="100"/>

</menu>
