<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pablohenao.turismo_jardin.FragmentTurismo"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:orientation="vertical" android:layout_width="match_parent"
        android:background="@color/paleturquoise"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/mifuente2"
            android:text="Cueva del Esplendor"
            android:layout_marginTop="50dp"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="238dp"
                android:src="@drawable/turismo_cuevadelesplendor1"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/mifuente"
                android:text="@string/turismo1info"
                android:layout_marginRight="60dp"
                android:layout_marginLeft="60dp"
                android:textSize="20dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="238dp"
                android:layout_marginBottom="50dp"
                android:src="@drawable/turismo_cuevadelesplendor2"
                />

        </LinearLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/mifuente2"
            android:text="Basílica del la Inmaculada Concepción"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="238dp"
                android:src="@drawable/jardinbasilica1"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/mifuente"
                android:text="@string/turismo2info"
                android:layout_marginRight="60dp"
                android:layout_marginLeft="60dp"
                android:textSize="20dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="238dp"
                android:src="@drawable/jardinbasilica2"
                android:layout_marginBottom="50dp"
                />

        </LinearLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/mifuente2"
            android:text="Cueva delos Guácharos"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="238dp"
                android:src="@drawable/turismo_cuevadeguacharos1"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/mifuente"
                android:text="@string/turismo3info"
                android:layout_marginRight="60dp"
                android:layout_marginLeft="60dp"
                android:textSize="20dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="238dp"
                android:layout_marginBottom="50dp"
                android:src="@drawable/turismo_cuevadeguacharos2"
                />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
