<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:context="com.pablohenao.turismo_jardin.FragmentHoteles"
android:layout_width="match_parent"
android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:orientation="vertical" android:layout_width="match_parent"
        android:background="@color/paleturquoise"
        android:layout_height="match_parent">




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/mifuente2"
            android:text="Hacienda Balandú"
            android:layout_marginTop="50dp"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="238dp"
                android:src="@drawable/hotel_haciendabalandu1"
             />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/mifuente"
                android:text="@string/hotel1info"
                android:layout_marginRight="60dp"
                android:layout_marginLeft="60dp"
                android:textSize="20dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="238dp"
                android:layout_marginBottom="50dp"
                android:src="@drawable/hotel_haciendabalandu2"
                />

        </LinearLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/mifuente2"
            android:text="Hotel Jardín"
            android:id="@+id/txthotel"

            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="238dp"
                android:src="@drawable/hotel_jardin1"
                android:id="@+id/imagen1_hotel" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/mifuente"
                android:id="@+id/txtinfo"
                android:text="@string/hotel3info"
                android:layout_marginRight="60dp"
                android:layout_marginLeft="60dp"
                android:textSize="20dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="238dp"
                android:src="@drawable/hotel_jardin2"
                android:layout_marginBottom="50dp"
                android:id="@+id/imagen2_hotel"/>

        </LinearLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/mifuente2"
            android:text="Balcones del Parque"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="238dp"
                android:src="@drawable/hotel_balconesdelparque1"
                />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/mifuente"
                android:text="@string/hotel2info"
                android:layout_marginRight="60dp"
                android:layout_marginLeft="60dp"
                android:textSize="20dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="238dp"
                android:layout_marginBottom="50dp"
                android:src="@drawable/hotel_balconesdelparque2"
                />

        </LinearLayout>

    </LinearLayout>

</ScrollView>

    <!--

        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcion"
            android:textAppearance="@style/mifuente"
            android:layout_weight="1.8"/>

        <Spinner
            android:id="@+id/hotel_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/mifuente2"
        android:text="HOTEL JARDIN"
        android:id="@+id/txthotel"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="238dp"
            android:src="@drawable/hotel_jardin1"
            android:id="@+id/imagen1_hotel" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/mifuente"
            android:id="@+id/txtinfo"
            android:text="@string/hotel3info"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:textSize="20dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="238dp"
            android:src="@drawable/hotel_jardin2"
            android:id="@+id/imagen2_hotel"/>

    </LinearLayout>

            -->